Add static delay table

--- a/public/route-delays.html
+++ b/public/route-delays.html
@@ -7,7 +7,7 @@
   <!-- Thanks to Mario C. E. Freese <mcefreese@gmail.com> for permission to use background image -->
   <body style='background-image:URL("AirLines-white.jpg");background-repeat:no-repeat;background-position:center top;-webkit-background-size:100%;-moz-background-size:100%;-o-background-size:100%;background-size: 100%;'>
     <p style="margin-bottom:2cm"/>
-    <form action="/delays.html" style="width:300px;margin:0 auto;padding-top=200px;background:#FFFFFF" method="get" target="results_iframe" class="elegant-aero">
+    <form action="/delays" style="width:300px;margin:0 auto;padding-top=200px;background:#FFFFFF" method="get" target="results_iframe" class="elegant-aero">
       <label>
 	<span>Origin:</span>
 	<input type="text" name="origin" value="ORD"/>
